modified:   index.html

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                     }
                 }
                 console.log("Iteration:" + iteration + ", updated edges: " + updated);
+                iteration++;
                 setTimeout(updateMap, 5000);
             }
         </script>
