modified:   index.html

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 {
                     if( path.source != null )
                     {
-                        map.removeControl(path.source.marker);
+                        map.removeLayer(path.source.marker);
                     }
                     else
                     {
@@ -273,7 +273,7 @@
                 {
                     if( path.dest != null )
                     {
-                        map.removeControl(path.dest.marker);
+                        map.removeLayer(path.dest.marker);
                     }
                     else
                     {
