modified:   index.html

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 path.line = 
                     L.polyline(pathPoints,
                     {
-                        color: get_random_color(),
+                        color: '#660099',
                         opacity: 0.75
                     }).addTo(map);
 
