modified:   index.html

--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
                 {
                     timeoutId = setTimeout(updateMap, 5000);
                 }
+
+                isUpdating = false;
             }
         </script>
     </head>
